terraform/security.tf
resource "aws_security_group" "base_linux" {
  name        = "base_linux_${random_string.customer_id.result}"
  description = "base security rules for all linux nodes"
  vpc_id      = aws_vpc.default.id

  tags = {
    Name      = "${var.tag_dept}-${var.tag_project}_${random_string.customer_id.result}_security_group"
    X-Dept    = var.tag_dept
    X-Project = var.tag_project
    X-Contact = var.tag_contact
  }
}

resource "aws_security_group" "base_windows" {
  name        = "base_windows_${random_string.customer_id.result}"
  description = "base security rules for all windows nodes"
  vpc_id      = aws_vpc.default.id

  tags = {
    Name      = "${var.tag_dept}-${var.tag_project}_${random_string.customer_id.result}_security_group"
    X-Dept    = var.tag_dept
    X-Project = var.tag_project
    X-Contact = var.tag_contact
  }
}

resource "aws_security_group" "chef_automate" {
  name        = "chef_automate_${random_string.customer_id.result}"
  description = "Chef Automate Server"
  vpc_id      = aws_vpc.default.id

  tags = {
    Name      = "${var.tag_dept}-${var.tag_project}_${random_string.customer_id.result}_security_group"
    X-Dept    = var.tag_dept
    X-Project = var.tag_project
    X-Contact = var.tag_contact
  }
}

//////////////////////////
// Base Linux Rules
resource "aws_security_group_rule" "ingress_allow_22_tcp_all" {
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.base_linux.id
}

//////////////////////////
// Base Windows Rules
resource "aws_security_group_rule" "ingress_allow_3389_tcp_all" {
  type              = "ingress"
  from_port         = 3389
  to_port           = 3389
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.base_windows.id
}

////////////////////////////////
// Chef Automate Rules
# HTTP (nginx)
resource "aws_security_group_rule" "ingress_chef_automate_allow_80_tcp" {
  type              = "ingress"
  from_port         = 80
  to_port           = 80
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.chef_automate.id
}

# HTTPS (nginx)
resource "aws_security_group_rule" "ingress_chef_automate_allow_443_tcp" {
  type              = "ingress"
  from_port         = 443
  to_port           = 443
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.chef_automate.id
}

# Egress: ALL
resource "aws_security_group_rule" "linux_egress_allow_0-65535_all" {
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.base_linux.id
}

resource "aws_security_group_rule" "windows_egress_allow_0-65535_all" {
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.base_windows.id
}
